# DCC012

./: README.md
ap1-arquivos/: CMakeLists.txt  README.md
ap1-arquivos/src/: config.h  siga.cc
ap1-arquivos/tests/: test3.cc
ap2-ordenacao/: README.md  REPORT.md
ap2-ordenacao/app/: classifica.cc  performance.cc
ap2-ordenacao/include/: perf.h  siga.h  sort.h  tools.h
ap2-ordenacao/src/: perf.cc  siga.cc  tools.cc
ap2-ordenacao/tests/: test2.cc  test3.cc  test4.cc  test5.cc  test6.cc
ap3-arvores/: CMakeLists.txt  README.md  REPORT.md
ap3-arvores/app/: performance.cc  pesquisa.cc
ap3-arvores/include/: avl_tree.h  b_node.h  b_tree.h  config.h  estudante.h  perf.h  rb_node.h  rb_tree.h  siga.h  sort.h  tools.h
ap3-arvores/src/: perf.cc  siga.cc  tools.cc
ap3-arvores/tests/: CMakeLists.txt  test1.cc  test2.cc  test3.cc  test4.cc  test5.cc  test6.cc  test7.cc  test8.cc  test9.cc
ap4-strings/: CMakeLists.txt  README.md  StringMatchingOutput.txt  desempenho.cpp  main.cpp  report.md
ap4-strings/files/: StringMatchingOrig.txt  pattern.txt
ap4-strings/src/: CMakeLists.txt  string_matching.cpp  string_matching.h
ex1-sort/: CMakeLists.txt  README.md
ex1-sort/include/: sort.h
ex1-sort/src/: bubblesort.cpp  mergesort.cpp
ex1-sort/tests/: CMakeLists.txt  test_bubblesort.cpp  test_mergesort.cpp
ex2-heap/: CMakeLists.txt  README.md
ex2-heap/libheap/: CMakeLists.txt  config.h.in
ex2-heap/libheap/include/: leftist_heap.h  leftist_heap_node.h
ex2-heap/tests/: CMakeLists.txt
ex3-splay/: CMakeLists.txt  README.md  main.cpp  splay.h  splay_node.h
ex4-hash/: CMakeLists.txt  README.md  REPORT.md  performance.cc
ex4-hash/hash/: CMakeLists.txt
ex4-hash/hash/include/: hash.h  hash_function.h  list.h
ex4-hash/hash/src/: hash.cc  list.cc
ex4-hash/tests/: CMakeLists.txt  test_hash1.cc  test_hash2.cc  test_hash3.cc  test_list.cc
ex5-compression/: CMakeLists.txt  README.md  test_huffman.cpp  test_lz77.cpp  test_lz78.cpp  test_lzw.cpp
ex5-compression/include/: common.h  huffman.h  lz77.h  lz78.h  lzw.h
ex5-compression/src/: common.cpp  huffman.cpp  lz77.cpp  lz78.cpp  lzw.cpp
